--- a/style-game.css
+++ b/style-game.css
@@ -14,7 +14,7 @@ body {
   background-size: cover;
   width: 490px;
   height: 750px;
-  padding: 60px 0;
+  padding-top: 60px;
   margin: 0;
 }
 h1,
